# oscats

./: .hgignore  Contributing.md  Dependencies.md  FAQ.md  Features.md  INSTALL.win32.txt  ProjectHome.md  configure.in
bindings/: oscats-common.defs
bindings/java/: LICENSE  Makefile.am  oscats-java.defs
bindings/java/generator/: BindingsGenerator.java
bindings/java/generator/com/operationaldynamics/codegen/: FundamentalThing.java  Thing.java
bindings/java/jni/: bindings_java.h  bindings_java_util.c
bindings/java/oscats/: Administrand.java  AlgChooser.java  AlgClassRates.java  AlgClosestDiff.java  AlgEstimate.java  AlgEstimateAlpha.java  AlgEstimateClass.java  AlgEstimateTheta.java  AlgExposureCounter.java  AlgFixedLength.java  AlgMaxFisher.java  AlgMaxKlClass.java  AlgMaxKlCont.java  AlgMaxKlDiscr.java  AlgMaxKlIrt.java  AlgPickRand.java  AlgSimulateAlpha.java  AlgSimulateClass.java  AlgSimulateIrt.java  AlgSimulateTheta.java  Algorithm.java  Attributes.java  BitArray.java  ClassModel.java  ClassModelDina.java  ClassModelNida.java  ContModel.java  ContModelL1p.java  ContModelL2p.java  ContModelL3p.java  ContModelNominal.java  Covariates.java  DiscrModel.java  DiscrModelDina.java  DiscrModelNida.java  Examinee.java  GslMatrix.java  GslPermutation.java  GslVector.java  Integrate.java  (+19 more)
bindings/java/oscats/bindings/: Plumbing.java
bindings/java/oscats/glib/: GObject.c  GObject.java  GValue.c  GValue.java  Value.java
bindings/perl/: Build.PL.in  Makefile.am  codegen.pl  oscats.override  oscats.pm
bindings/php/: LICENSE  Makefile.am  oscats.overrides  php_oscats.c
bindings/php/generator/: arg_types.php  generator.php
bindings/python/: LICENSE  Makefile.am  oscats.defs  oscats.override  oscatsmodule.c  pyalgorithm.c  pyalgorithm.h
config/: getsp.java
doc/liboscats/: Makefile.am  bindings.xml  build.xml  intro.xml  liboscats-docs.sgml  liboscats-sections.txt
examples/: Makefile.am  Makefile.in  README  ex01.c  ex01.java  ex01.php  ex01.pl  ex01.py  ex01_java.m
m4/: java.m4  python.m4
src/liboscats/: Makefile.am  administrand.c  administrand.h  algorithm.c  algorithm.h  algorithms.h  attributes.c  attributes.h  bitarray.c  bitarray.h  classmodel.c  classmodel.h  contmodel.c  contmodel.h  covariates.c  covariates.h  discrmodel.c  discrmodel.h  examinee.c  examinee.h  gsl.c  gsl.h  integrate.c  integrate.h  irtmodel.c  irtmodel.h  item.c  item.h  itembank.c  itembank.h  model.c  model.h  models.h  oscats.h  point.c  point.h  random.c  random.h  space.c  space.h  (+2 more)
src/liboscats/algorithms/: astrat.c  chooser.c  chooser.h  class_rates.c  class_rates.h  closest_diff.c  closest_diff.h  estimate.c  estimate.h  estimate_alpha.c  estimate_alpha.h  estimate_class.c  estimate_class.h  estimate_theta.c  estimate_theta.h  exposure_counter.c  exposure_counter.h  fixed_length.c  fixed_length.h  max_fisher.c  max_fisher.h  max_kl.c  max_kl_class.c  max_kl_class.h  max_kl_cont.c  max_kl_cont.h  max_kl_discr.c  max_kl_discr.h  max_kl_irt.c  max_kl_irt.h  pick_rand.c  pick_rand.h  simulate.c  simulate_alpha.c  simulate_alpha.h  simulate_class.c  simulate_class.h  simulate_irt.c  simulate_irt.h  simulate_theta.c  (+3 more)
src/liboscats/models/: dina.c  dina.h  gpc.h  gr.c  gr.h  hlgr.c  hlgr.h  l1p.c  l1p.h  l2p.c  l2p.h  l3p.c  l3p.h  nida.c  nida.h  nominal.c  nominal.h  pc.c  pc.h
